src/style.css
:root {
  --heading-font: "Playfair Display", serif;
  --text-font: "Poppins", sans-serif;
  --primary-color: #f9f7fe;
  --secondary-color: #272142;
  --button-color: #6c63ff;
}

body {
  background-color: white;
}

img {
  background-color: var(--primary-color);
}
main {
  margin-right: 200px;
  margin-left: 50px;
}
main h2 {
  font-family: var(--heading-font);
  font-size: 64px;
  font-weight: 700;
  line-height: 85px;
  text-align: left;
  padding-top: 95px;
}
main p {
  font-family: var(--text-font);
  font-size: 16px;
  font-weight: 400;
  line-height: 30px;
  text-align: left;
  opacity: 0.7;
}
ul {
  list-style: none;
  padding: 0;
  margin-top: 28px;
  margin-right: 140px;
}
li {
  display: inline;
  margin-left: 20px;
  transition: all 100ms ease-in-out;
}
li a:hover {
  color: var(--button-color);
  opacity: 1;
}
li a {
  text-decoration: none;
  color: var(--secondary-color);
  font-family: var(--text-font);
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  opacity: 0.7;
}
.active {
  color: var(--button-color);
  opacity: 1;
}
.logo {
  max-height: 40px;
  margin: 20px 0 20px 140px;
}
.page-header {
  text-align: left;
  height: 900px;
  width: auto;
  background-color: white;
  padding-top: 240px;
  margin: 0 140px 70px 140px;
}
.page-header h1 {
  font-family: var(--heading-font);
  font-size: 64px;
  font-weight: 700;
  line-height: 85px;

  margin-right: 125px;
}
.page-header h2 {
  font-family: var(--text-font);
  font-size: 18px;
  font-weight: 700;
  line-height: 27px;

  color: #272142;
  margin-bottom: 28px;
  margin-right: 125px;
}
.page-header p {
  font-family: var(--text-font);
  font-size: 16px;
  font-weight: 400;
  line-height: 30px;

  color: #272142;
  opacity: 70%;
  margin-right: 125px;
}
.page-header h3 {
  font-family: var(--text-font);
  font-size: 24px;
  font-weight: 700;
  line-height: 36px;
  text-align: center;
}
.page-header h4 {
  font-family: var(--text-font);
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  text-align: center;
  color: #272142;
  opacity: 0.7;
}

.hero {
  text-align: center;
  height: 900px;
  width: auto;
  background-color: var(--primary-color);
  margin-bottom: 70px;
}
.hero p {
  font-family: var(--text-font);
  font-weight: 700;
  font-size: 36px;
  line-height: 56px;
  padding-top: 270px;
  color: var(--secondary-color);
}
.hero h1 {
  font-family: var(--heading-font);
  font-weight: 700;
  font-size: 96px;
  line-height: 128px;
}
.hero h2 {
  font-family: var(--text-font);
  font-weight: 400px;
  font-size: 24px;
  line-height: 36px;
}

footer h3 {
  font-family: var(--heading-font);
  font-size: 48px;
  font-weight: 700;
  line-height: 64px;
  text-align: left;
}

.work-inquiry a {
  margin-right: 120px;
  margin-top: 70px !important;
}
.work-inquiry-text p {
  font-family: var(--text-font);
  color: var(--secondary-color);
  opacity: 0.7;
  font-size: 18px;
  font-weight: 400;
  line-height: 27px;
  text-align: left;
}
.work-inquiry {
  background-color: var(--primary-color);
  padding-left: 120px;
  border-radius: 20px;
  margin-right: 140px;
  margin-left: 140px;
}
.work-inquiry-homepage {
  margin-right: 200px;
  margin-left: 50px;
}
.work-inquiry-text {
  padding: 50px 0;
}

.socials a {
  font-size: 20px;
  padding: 8px;
  margin: 15px;
  color: var(--button-color);
  background-color: var(--primary-color);
  border-radius: 50%;
}
.contact-info p {
  text-align: center;
  margin-top: 80px;
  font-family: var(--text-font);
  font-size: 24px;
  font-weight: 500;
  line-height: 36px;
}
.contact-info a {
  text-decoration: none;
}

.primary-link {
  padding: 18px 30px;
  background-color: var(--button-color);
  margin-top: 30px;
  color: white;
}
.description {
  text-align: center;
  padding: 16px;
  font-family: var(--text-font);
  font-weight: 400;
  font-size: 18px;
  line-height: 27px;
  color: var(--secondary-color);
}
.secondary-link {
  padding: 18px 30px;
  color: var(--button-color);
  background-color: white;
  border: 1px solid var(--button-color);
  margin-top: 50px;
}
.projec-photo-left {
  padding-right: 30px;
}
.projec-photo-right {
  padding-left: 30px;
}
.contact {
  text-align: left !important;
  margin-bottom: 0;
}
.home-page-nav {
  background-color: var(--primary-color);
}

@media (max-width: 992px) {
  main {
    text-align: center;
    margin: 0 auto;
    padding: 0 auto;
    padding-right: 20px;
  }

  main h2 {
    text-align: center;
    padding-top: 30px;
    font-size: 45px;
  }
  main p {
    text-align: center;
    margin: 10px;
  }
  .secondary-link {
    margin-top: 30px;
  }
  .hero h1 {
    font-size: 55px;
    line-height: 1.5;
  }
  .hero h2 {
    padding: 10px;
  }
  .hero p {
    padding-top: 150px;
  }
  .hero {
    height: 700px;
    padding-right: 20px;
  }
  .page-header {
    height: 700px;
    margin: 0 20px 30px 20px;
    text-align: center;
  }
  .page-header h1 {
    font-size: 55px;
    line-height: 1.5;
    margin-right: 0;
  }
  .page-header h2 {
    padding: 10px;
    margin-right: 0;
  }
  .page-header p {
    padding-top: 50px;
    margin-right: 0;
  }
  .page-header img {
    margin-top: 50px;
    margin-bottom: 30px;
  }
  .logo {
    margin: 20px 0 20px 20px;
  }
  ul {
    margin-right: 20px;
    padding-right: 20px;
  }
}

